\name{NEWS}
\title{NEWS file for the grImport2 package}
\encoding{UTF-8}

\section{Changes in version 0.1-6}{
  \itemize{
    \item ALWAYS apply transform for <use> elements.
  }
}
\section{Changes in version 0.1-5}{
  \itemize{
    \item Added \code{clip} argument to \code{grid.picture()} so that
    we can inherit clipping region when drawing an imported image
    (default remains that the picture sets its own clipping viewport).
    Thanks to Silas Dean.
  }
}
\section{Changes in version 0.1-4}{
  \itemize{
    \item Fix for importing radial gradient with gradientTransform
    (radius of gradient was not being transformed correctly).
  }
}
\section{Changes in version 0.1-3}{
  \itemize{
    \item Fix for \code{makeContent()} methods for picRect, picPath,
    and picPolyline, so that the forced grob has the same name
    as the original grob.

    \item Fix for parsing \code{<symbol>} element with no children or
    with empty image.

    \item Fix for import of \code{lwd} from SVG \code{line-width}

    \item Relax import requirement that SVG file be generated by
    \pkg{grConvert};  now accept SVG file that is generated by
    \pkg{grConvert} OR SVG file that can be identified as being
    generated by Cairo graphics.  This allows us to accept, for example,
    files generated by \code{rsvg_svg()} from the \pkg{rsvg} package.
  }
}
\section{Changes in version 0.1-2}{
  \itemize{
    \item Fix for importing rotated rectangles.

    \item Fix for importing rotated raster images.

    \item Improved import of line widths.

    \item Enhancement of importing patterns to allow general pattern
    content, rather than just a single image as pattern content.
  }
}
\section{Changes in version 0.1-1}{
  \itemize{
    \item Fix for 'default.units' argument in grid.picture(), which was
    being ignored.
    
    \item Fix to grobify() method for \code{"PictureImage"} to correct
    location calculation for raster element (was doing incorrect
    unit arithmetic).
    